更新Kotlin协程的异常处理笔记

--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -284,6 +284,10 @@ println("main: Now I can quit.")
 
 > 需要注意的是，如果抛出异常是异步的，那么协程的处理是无法catch的，比如挂起函数中在一个新线程中抛出了异常，那么即使是CancellationException也会造成崩溃，所以这种情况需要自己去catch处理，或者catch住后使用resumeWithException传递。
 
+> async 启动的协程，在await函数抛出异常，**但有一个前提条件是**，这个async启动的是根协程，而不是在其他协程中启动的子协程，如果是子协程，那么依然会将异常传递给父协程，而不会在await函数才抛出。
+
+> 在`coroutineScope`或者`supervisorScope`内启动协程，因为他们对应的父协程ScopeCoroutine的isScopedCoroutine属性为true，从而不会将异常往更上级的父协程传递，并且以挂起函数resumeWith的方式返回结果或异常。所以`coroutineScope`或者`supervisorScope`内虽然创建了一个协程作用域，但表现得和挂起函数一样。
+
 [协程中的取消和异常 | 核心概念介绍](https://juejin.cn/post/6844904164774903822)
 [协程中的取消和异常 | 驻留任务详解](https://juejin.cn/post/6883730571848056845)
 [协程中的取消和异常 | 异常处理详解](https://juejin.cn/post/6888259219008126983)
