更新Kotlin类型笔记

--- a/Kotlin/类型系统.md
+++ b/Kotlin/类型系统.md
@@ -57,7 +57,7 @@ if (obj !is String) {// 等同于 !(obj is String)
 由于Kotlin可用于JVM、Web、Native等平台，所以Kotlin中的类型需要对应到对应平台的类型，比如调用Java中的方法，此时Kotlin不知道返回值类型的可空性，这种类型就称为平台类型。平台类型既可以当作可空类型，也可以当作非空类型。平台类型的引入是Kotlin兼容Java时的一种权衡设计。试想下，如果所有来自Java的值都被看成非空，那么就容易写出比较危险的代码。反之，如果Java中的值都强制当作可空，则会导致大量的null检查。综合考量，平台类型是一种折中的设计方案。
 
 #### 2. Nothing
-`Nothing` 是没有实例的类型，`Nothing` 类型的表达式不会产生任何值。Kotlin中的return、throw等返回值都为 `Nothing`。`Nothing?` 只包含一个值：null
+`Nothing` 是没有实例的类型，`Nothing` 类型的表达式不会产生任何值，`Nothing` 是任何类型的子类。`Nothing?` 只包含一个值：null
 
 #### 3. 自动装箱和拆箱
 Kotlin中并没有int、float、double、long这样的原始类型，取而代之的是它们对应的引用类型包装类Int、Float、Double、Long、Boolean、Char、String、Array。kotlin中不区分基本类型和包装类型。
