--- a/设计模式/行为型模式.md
+++ b/设计模式/行为型模式.md
@@ -78,6 +78,8 @@ handler1.handleRequest(request);
 1. 由于一个请求没有明确处理者，不能保证一定被处理，也有可能因为责任链没有正确配置而得不到处理
 2. 如果责任链较长，请求的处理可能涉及多个对象，性能将受到一定影响，而且调试不方便
 
+> 有无限可能的判断或拦截操作，都可以考虑是否使用责任链模式
+
 #### 2. 命令模式
 对于一个开关，既可以将电线连到灯泡上来控制灯泡，也可以连到空调上来控制空调，开关向电器发送命令。对于这种需要向某些对象发送请求，但是不知道请求的接收者是谁，也不知道被请求的操作是哪个，此时需要有一种松耦合的方法来设计软件，使得请求发送者和接收者可以消除耦合，让对象之间的调用关系更加灵活，可以灵活地指定请求接收者以及被请求的操作。
 
@@ -474,6 +476,8 @@ context.algorithm();
 1. 客户端必须知道所有的策略类，并自行决定使用哪一种策略类。
 2. 会增加很多具体策略类
 3. 无法在客户端使用多个策略类，每次只能选择一种
+
+> 如果是同一个代码位置根据不同条件来构造策略对象，还是存在很多if-else判断，可以视情况来避免，例如将判断条件也作为抽象策略类的一个方法，然后将所有策略放到集合中，遍历判断。
 
 #### 10. 模板方法模式
 在软件开发中，某个方法的实现需要多个步骤，其中有些步骤是固定的，而有些步骤并不固定，存在可变性，为了提高代码的复用性和系统的灵活性，可以使用一种称之为模版方法模式的设计模式来对这类情况进行设计。在模版方法模式中，将实现功能的每一个步骤所对应的方法称为基本方法，而调用这些基本方法同时定义基本方法执行次序的方法称为模版方法。
