更新协程笔记

--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -150,7 +150,7 @@ val combined = context1 + context2
 GlobalScope.launch(Dispatchers.IO){...} //协程将在IO线程执行
 
 Dispatchers.Default        //使用默认调度器，会在线程池执行
-Dispatchers.Unconfined     //不限制，
+Dispatchers.Unconfined     //不限制，开始由启动协程的线程执行它，但被挂起后，会由恢复协程的线程继续执行
 Dispatchers.Main           //在主线程执行，经过handler.post
 Dispatchers.Main.immediate //在主线程执行，如果已经再主线程，就直接执行，不经过handler.post
 
