--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -230,9 +230,11 @@ suspend fun foo(): String {
 > 挂起和`Continuation`对象的本质在源码分析中详细说明。亦可参考[Kotlin Vocabulary | 揭秘协程中的 suspend 修饰符](https://juejin.cn/post/6844904177655611405)
 
 ## 6. 取消和异常
-launch函数会返回一个`Job`对象，调用它的`cancel`函数来取消协程。取消协程，当前处于挂起状态（执行但还未返回结果）的挂起函数如果使用的是`suspendCancellableCoroutine`，将抛出`CancellationException`异常，结束当前协程的执行。如果使用的是`suspendCoroutine`，那么不会抛出异常，会继续执行。
+launch函数会返回一个`Job`对象，调用它的`cancel`函数可以取消协程。取消协程，会修改协程（即AbstractCoroutine、Job）自身的状态，但实际需要取消的是协程内调用的挂起函数，如果挂起使用的是`suspendCancellableCoroutine`，它内部使用的`CancellableContinuationImpl`会注册协程的取消监听，在协程取消时，就会回调取消，然后抛出`CancellationException`异常，结束当前协程的执行。如果使用的是`suspendCoroutine`，那么不会抛出异常，会继续执行。
 
-虽然使用`suspendCancellableCoroutine()`的挂起函数支持取消，但它并不是神奇的取消。首先，挂起函数的`suspendCancellableCoroutine()`中用到的`CancellableContinuationImpl`是原本的continuation的包装，这个挂起函数中得到的continuation就是当前协程对应的`ContinuationImpl`，它的context就是协程最终的回调job（也是AbstractCoroutine、continuation）的context，得到这个job就可以注册job取消的监听；所以如果在启动协程后，才调用取消，那么挂起函数的`suspendCancellableCoroutine()`中用到的`CancellableContinuationImpl`会所在协程对应的`Job`被调用`cancel()`函数时，把状态改为`CancelledContinuation`，然后主动调用`resumeWith()`带上`CancellationException`异常。如果是先调用`cancel()`，再执行协程中的挂起函数，在`CancellableContinuationImpl`的`getResult()`时判断状态为已取消，就会直接抛出取消异常了。无论是哪种情况，如果我们还是在取消后调用了`resume`，那么它会被忽略。
+`suspendCancellableCoroutine()`的挂起函数支持取消，但它并不是神奇的取消。首先，挂起函数的`suspendCancellableCoroutine()`中用到的`CancellableContinuationImpl`是原本的continuation的包装，这个挂起函数中得到的continuation就是当前协程对应的`ContinuationImpl`，它的context就是协程最终的回调job（也是AbstractCoroutine、continuation）的context，得到这个job就可以注册job取消的监听；所以如果在启动协程后，才调用取消，那么挂起函数的`suspendCancellableCoroutine()`中用到的`CancellableContinuationImpl`会所在协程对应的`Job`被调用`cancel()`函数时，把状态改为`CancelledContinuation`，然后主动调用`resumeWith()`带上`CancellationException`异常。如果是先调用`cancel()`，再执行协程中的挂起函数，在`CancellableContinuationImpl`的`getResult()`时判断状态为已取消，就会直接抛出取消异常了。无论是哪种情况，如果我们还是在取消后调用了`resume`，`CancellableContinuationImpl`中都会忽略这个调用。
+
+如果主动调用`suspendCancellableCoroutine()`的`CancellableContinuation`的取消函数，一样会引发协程的取消。
 
 了解了取消的工作方式，就知道即使是使用`suspendCancellableCoroutine()`，在被取消的情况下，我们在`suspendCancellableCoroutine()`函数传入的代码块依然会执行，只是取消后调用的`resume`会被忽略而已。所以如果没有检查取消状态从而调整代码逻辑的话，挂起函数内的代码仍然会正常执行完毕。那么，以一个循环为例，要使该代码在业务逻辑上可以被取消，可以在每次循环时检查状态：
 ```
@@ -256,7 +258,7 @@ suspend fun foo():String {
 ```
 val startTime = System.currentTimeMillis()
 val job = launch(Dispatchers.Default) {
-    var nextPrintTime = startTime
+    var nextPrintTime = startTime 
     var i = 0
     while (isActive) { // 可以被取消的计算循环
         // 每秒打印消息两次
@@ -294,6 +296,7 @@ println("main: Now I can quit.")
 [Cancellation in coroutines](https://medium.com/androiddevelopers/cancellation-in-coroutines-aa6b90163629)
 
 > 关于父子协程的取消和异常逻辑，在父子协程部分介绍
+> 取消和异常本质是一样的，取消就是抛出`CancelledContinuation`，只是在最终的异常处理上，`CancelledContinuation`不会
 
 ### 不可取消的代码块
 ```
@@ -393,7 +396,7 @@ Child 1的父Job应该是`scope.launch`启动的这个协程的Job，而不是`S
 **除了Job的情况略有特殊，其他上下文元素就比较直接了，优先级顺序是：launch函数的参数 > 作用域的 CoroutineContext > 默认值**
 
 #### 父子协程的异常和取消
-当一个协程由于一个异常而运行失败时，它会传播这个异常并传递给它的父级。接下来，父级会进行下面几步操作:
+当一个协程由于一个异常（取消也是异常）而运行失败时，它会传播这个异常并传递给它的父级。接下来，父级会进行下面几步操作:
 
 1. 取消它自己的所有子级；
 2. 取消它自己；
