--- a/Kotlin/协程源码分析.md
+++ b/Kotlin/协程源码分析.md
@@ -60,7 +60,11 @@ public fun <R, T> (suspend R.() -> T).createCoroutine(
 还有 `startCoroutine` 函数，实际就是自动对 `createCoroutine` 函数调用 `resume` ,直接启动。
 
 #### 挂起
-`suspend lambda` 将被包装于 `BaseContinuationImpl` 的 `invokeSuspend` 中，被触发 `resumeWith` 时，调用 `invokeSuspend` 时，可以看到返回状态，会影响后续是否继续执行continuation还是真正挂起协程。如果没有挂起，就是 `invokeSuspend` 中直接返回了正常结果；如果挂起，返回的就是 `COROUTINE_SUSPENDED` ，`resumeWith` 将异步被调用，然后恢复协程执行。
+`suspend lambda`的内容会被包装于 `BaseContinuationImpl`（是`Continuation`子类） 的 `invokeSuspend` 中，被触发 `resumeWith` 时，会调用 `invokeSuspend`，可以看到返回状态，会影响后续是否继续执行continuation还是真正挂起协程。如果没有挂起，就是 `invokeSuspend` 中直接返回了正常结果；如果挂起，返回的就是 `COROUTINE_SUSPENDED` ，`resumeWith` 将异步被调用，然后恢复协程执行。
+
+而`invokeSuspend`的内容就是将原本的`suspend lambda`内调用的各个挂起函数，转换为状态机的形式
+
+所谓的协程本身可以看作是`BaseContinuationImpl`，而`Job`（是`AbstractCoroutine`，也是`continuation`）就是createCoroutine或者startCoroutine函数传入的回调参数。`BaseContinuationImpl`的`resumeWith()`完成后，通知`Job`；而`BaseContinuationImpl`的`resumeWith()`内部就会调用各个挂起函数，每个挂起函数持有的continuation就是`BaseContinuationImpl`，所以每个挂起函数内resume又会调用`BaseContinuationImpl`的resumeWith，从而继续执行下一个挂起函数
 
 suspendCoroutine函数是suspendCoroutineUninterceptedOrReturn函数的包装，用于在挂起函数中获取到当前挂起函数的continuation。实质上，delay、yield、withContext等官方自带的挂起函数，内部都是通过suspendCoroutineUninterceptedOrReturn来完成挂起和恢复流程，即拿到continuation在适当时机调用resume。
 
@@ -73,7 +77,6 @@ suspendCoroutine函数是suspendCoroutineUninterceptedOrReturn函数的包装，
 ```
 //反编译代码
 ```
-协程本身是挂起函数转换的BaseContinuationImpl，而Job（abstractCoroutine，也是continuation）是回调。BaseContinuationImpl的resumeWith完成后，通知Job；而BaseContinuationImpl的resumeWith内部就回调用各个挂起函数，BaseContinuationImpl又会作为各个挂起函数的回调（continuation）
 
 ## 3. 协程上层框架设计和常用函数
 了解了作为基础设施的协程标准库后，已经可以明白Kotlin协程的核心原理和设计思想，但是标准库作为基础设施，API使用不够方便，功能也不够强大，所以还需要关注协程上层框架的设计。协程上层框架中，提供了协程作用域、Job、调度器、协程的父子关系（结构化并发）、取消和异常处理机制这些主要概念。
