--- a/Kotlin/类型系统.md
+++ b/Kotlin/类型系统.md
@@ -103,10 +103,10 @@ public class Test {
     }
 }
 ```
-* demo1中，错误1是因为Java泛型中尽管B是A的子类，但是Source<B>并不是Source<A>的子类。而使用Source<? extends A>就是泛型的协变，可以认为Source<B>是Source<? extends A>的子类。
+* demo1中，错误1是因为Java泛型中尽管B是A的子类，但是`Source<B>`并不是`Source<A>`的子类。而使用`Source<? extends A>`就是泛型的协变，可以认为`Source<B>`是`Source<? extends A>`的子类。
 * demo1中，错误2、3、4都是因为协变时只能作为生产者，也就是只能从中获取数据，而错误2、3、4都是在传入数据。
-* demo2中，Source<? super B>为逆变，使Source<A>成为了Source<? super B>的子类。
-* demo2中，错误1，虽然Source<? super B>是Source<A>的父类，但内部存储的泛型类型父子关系限制并没有改变，还是只能传B和B的子类的实例，而不能传B的父类（这里的super容易产生误会）。
+* demo2中，`Source<? super B>`为逆变，使`Source<A>`成为了`Source<? super B>`的子类。
+* demo2中，错误1，虽然`Source<? super B>`是`Source<A>`的父类，但内部存储的泛型类型父子关系限制并没有改变，还是只能传B和B的子类的实例，而不能传B的父类（这里的super容易产生误会）。
 * demo2中，错误2、3、4都是因为逆变时只能作为消费者，也就是只能传入数据，这和协变相反。
 
 Kotlin中的泛型的协变和逆变，不再使用Java中的通配符，而使用 `in` 和 `out`。所以同样的情况，Kotlin的方式如下：
@@ -155,7 +155,7 @@ fun demo(s: Source<A>) {
 }
 ```
 
-**为什么使用了协变或者逆变，就只有生产和消费的其中一种功能呢？**，例如使用协变，Source<out A>可以实际是Source<B>类型，也可以是Source<C>类型，并不能确定，所以即使向其中输入A的子类，也是可能异常的。如果使用逆变，Source<in B>可能实际是Source<A>类型，可以是Source<Any>类型，必然是B的父类，所以向其中传入B和B的子类是没有问题的，但读取时就不确定是什么类型了，所以无法读取。
+**为什么使用了协变或者逆变，就只有生产和消费的其中一种功能呢？**，例如使用协变，`Source<out A>`可以实际是`Source<B>`类型，也可以是`Source<C>`类型，并不能确定，所以即使向其中输入A的子类，也是可能异常的。如果使用逆变，`Source<in B>`可能实际是`Source<A>`类型，可以是`Source<Any>`类型，必然是B的父类，所以向其中传入B和B的子类是没有问题的，但读取时就不确定是什么类型了，所以无法读取。
 
 总体来说，泛型为了安全，所以让`List<Parent>`并不是`List<Sub>`的父类，但在一些场景中，我们需要更灵活得赋值和传参，此时使用协变和逆变来限制会产生异常的行为，从而提升类型转换的灵活性，当然也牺牲了`生产`或者`消费`的其中一个功能。
 
