--- a/Android/View/触摸事件分发.md
+++ b/Android/View/触摸事件分发.md
@@ -1,14 +1,16 @@
 传递到activity的流程可以通过打印调用栈查看
 
-https://www.wanandroid.com/wenda/show/11287
-待办：注意cancel 一般父view 拦截 会给子view发cancel，如果move事件超出子view范围，默认还是发给子view处理，应该例如父view是ScrollView等滚动类的View，识别到move的方向是自己的滚动方向，就会拦截并自己处理，并给子view发cancel
+注意cancel 一般父view 拦截 会给子view发cancel，如果move事件超出子view范围，默认还是发给子view处理，应该例如父view是ScrollView等滚动类的View，识别到move的方向是自己的滚动方向，就会拦截并自己处理，并给子view发cancel。
+
+如果子View消费了Down事件，ViewGroup移除该子View时也会发送Cancel事件。
 
 设置视图的 WindowManager 布局参数的 flags为FLAG_WATCH_OUTSIDE_TOUCH，这样点击事件发生在这个视图之外时，该视图就可以接收到一个 ACTION_OUTSIDE 事件。
 
 ## 1.ViewGroup之dispatchTouchEvent(MotionEvent ev)
 首先分析`ViewGroup`的`dispatchTouchEvent`源码
 **几个注意点：**
-* 每个`ViewGroup`都有一个`mFirstTouchTarget `，`mFirstTouchTarget `只有在`DOWN`事件有`child`消费时才不为`null`，不为`null`才会分发给`child`，可见只有`child`消费了`down`，才会分发后续事件给`child`。
+* 每个`ViewGroup`都有一个`mFirstTouchTarget`，`mFirstTouchTarget`是`TouchTarget`类型，`TouchTarget`包含next，可以形成一个链表结构。`mFirstTouchTarget`只有在`DOWN`事件有`child`消费时才不为`null`，不为`null`才会分发给`child`，可见只有`child`消费了`down`，才会分发后续事件给`child`。
+* `TouchTarget`描述一个被触摸的view和对应的一个或多个手指，因为可以同时触摸多个view，所以`TouchTarget`可以形成一个链表结构。
 * 多点触控时，非第一个的一个或多个手指的`down`和`up`分别是`ACTION_POINTER_DOWN`和`ACTION_POINTER_UP`，但`move`还是`ACTION_MOVE`。所有手指的`move`是同一个`MotionEvent`对象。在事件中可以用`MotionEvent.getX(int index)`等方法传入索引区分不同手指。不同手机支持的手指数量不一致。
 * 每个事件都会由`Activity`传给`DecorView（ViewGroup）`来分发，所以根`ViewGroup`将分发每个事件。
 ```
@@ -63,7 +65,7 @@ https://www.wanandroid.com/wenda/show/11287
             TouchTarget newTouchTarget = null;
 
 
-            // 记录事件是否以及派发给新的目标控件，用于判断已分发的事件，避免重复分发。只有当是DOWN事件且被child消费才置true
+            // 记录事件是否已经派发给新的目标控件，用于判断已分发的事件，避免重复分发。只有当是DOWN事件且被child消费才置true
             boolean alreadyDispatchedToNewTouchTarget = false;
             //如果没有cancel也没有拦截，就进入这个if，寻找newTouchTarget
             if (!canceled && !intercepted) {
@@ -117,7 +119,7 @@ https://www.wanandroid.com/wenda/show/11287
                                 break;
                             }
 
-                            // 如果之前没有此child的记录
+                            // 如果之前没有此child view的记录
 
                             //重置标志位
                             resetCancelNextUpFlag(child);
@@ -240,6 +242,9 @@ https://www.wanandroid.com/wenda/show/11287
         return handled;
     }
 ```
+
+> dispatchTransformedTouchEvent中可能会对原本的事件类型做修改。例如多点触控的情况，父view收到第二根手指对应的ACTION_POINTER_DOWN，传递给子view时，如果不是第一根手指对应的view，这个事件会调用MotionEvent.split修改为ACTION_DOWN
+
 ## 2.分发中的四种情况
 1. 默认情况，全部返回super，默认情况是不拦截不消费事件的。
 2. View的onTouchEvent()消费down事件，其他默认。
@@ -250,3 +255,7 @@ https://www.wanandroid.com/wenda/show/11287
 可以对view、activity、application的属性或者style/theme中设置如下
 <item name="android:windowEnableSplitTouch">false</item>
 <item name="android:splitMotionEvents">false</item>
+
+## 记录几篇写的可以的文章
+* https://juejin.cn/post/6844904065613201421
+* https://juejin.cn/post/6920883974952714247
