--- a/Android/Android架构/组件化和模块化.md
+++ b/Android/Android架构/组件化和模块化.md
@@ -1,4 +1,4 @@
-组件化以功能为导向，模块化以业务为导向，本质都是大化小，重用和解耦。一般一个模块包含一个或多个组件，实际应用中组件化和模块化可以一起出现，不需要刻意区分，模块也可以当作一个业务组件。现在流行组件化，且组件化基本就会模块化，所以直接以组件化为分析对象。一个模块可以依赖多个组件。组件则不能再依赖其他组件
+模块化的目的是使业务逻辑单元化；组件化的目的是使业务逻辑通用化，可以复用的代码下沉封装
 
 影子工程
 
