添加Android优化的零散笔记

--- a/Android/优化/启动优化.md
+++ b/Android/优化/启动优化.md
@@ -25,12 +25,30 @@ Complete
 * WaitTime：AMS启动Activity的总耗时
 
 
-卡顿优化中的工具，例如systrace结合自行添加的函数追踪
+卡顿优化中的工具，例如systrace结合自行添加的函数追踪、TraceView、Profiler、自定义Tracer
 
 ## 优化方式
 * 闪屏优化
 * 业务优化
-* 线程优化
+* 线程优化、线程优先级调整
 * 系统调用 少使用系统调用，例如PMS、Binder；少启动其他进程，因为进程会竞争cpu
+* Application onCreate之前cpu使用较低，可以把一些任务放在这之前，也就是attachBeseContext
+* 布局优化：异步(尽量使用异步单线程，因为LayoutInflater内部有锁)、code化。。。 
+* 异步预加载Class、方法改为字段、常量内联（修改字节码）
+* 异步预加载Drawable，根据Systrace查找耗时明显的
+* 减少任务数：不启动子进程、减少主界面之前的activity跳转、懒加载、缓存每次启动要用到的数据、减少不必要的网络请求
+* dex优化
+* 修改字节码
+* 语言层面优化：反射、内联、Kotlin语法糖
+* 虚拟机优化：关闭verify class（不稳妥）、GC抑制、主动触发AOT优化 
 
 主要还是使用例如卡顿优化、内存优化、I/O优化等方式
+
+## 思路
+* 启动过程全路径流程：bindApplication、attachBaseContext、installProvider、app onCreate、activity onCreate、setContentView、view渲染、主线程的各任务
+* 耗时成因分析：CPU Time、CPU调度、IO阻塞、锁等待、跨进程 
+* 以线上数据为准
+* 常规优化：延迟、异步、缓存、懒加载，分帧绘制 
+* 系统优化：并发、线程优先级、主线程消息调度
+* 数据库优化：索引、Explain工具
+* 可以懒加载就懒加载，不能就直接优化，不能优化就考虑业务降级
