--- a/Android/优化/耗电优化.md
+++ b/Android/优化/耗电优化.md
@@ -3,12 +3,21 @@ https://developer.android.google.cn/about/versions/pie/power
 https://tech.meituan.com/2018/03/11/dianping-shortvideo-battery-testcase.html
 https://blog.dreamtobe.cn/2016/08/15/android_scheduler_and_battery/
 
+## 原因
+* CPU/GPU
+* IO
+* wakelock 唤醒
+* 网络请求次数、流量
+* 音频、相机、屏幕
+* 其他：震动马达、陀螺仪等
+
 ## 评估耗电情况
 |方式|优缺点|
 |--|--|
 |dumpsys batterystats|有耗电量的详细数据，可读性差|
 |系统耗电排行|直观，但没有详细数据|
 |Battery Historian|直观，且有详细数据，需Android 5.0以上系统|
+|线下电流计||
   
  
 ## 优化方向
