--- a/Android/优化/内存优化.md
+++ b/Android/优化/内存优化.md
@@ -79,12 +79,18 @@ MAT的下载路径：https://www.eclipse.org/mat/downloads.php
 
 检测内存泄漏的方式是弱引用 `WeakReference` 和 `ReferenceQueue`，
 
-## 内存优化方式
+### HPROF文件
+http://hg.openjdk.java.net/jdk6/jdk6/jdk/raw-file/tip/src/share/demo/jvmti/hprof/manual.html
+
+## 内存优化方式 
+* 处理内存泄漏：包括app的泄漏和系统代码的泄漏
 * 根据设备分级，低端机可关闭复杂动画或其他功能，减少内存缓存，使用画质一般的图片。
 * 空进程也会占10M的内存，所以要减少没必要的进程
-* Bitmap优化  
+* Bitmap优化（分辨率、色彩通道、缓存数量）
 * 控制线程数量
 * 监控 定时获取并上报（一般项目没有资源条件）
+* 64位应用可以使用更多内存，减少oom
+* 及时释放缓存、调整引用关系
 
 安装包中的代码、资源、图片和so库
 ||classes.dex|Bitmaps|resource|.so文件|
