--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -277,10 +277,14 @@ println("main: Now I can quit.")
 
 通过在业务逻辑中判断当前协程是否被取消，如果被取消就可以不再执行后续流程，这样就达到了**业务逻辑上的取消**的目的。
 
+> 如果状态被取消，而业务逻辑代码没有被实际取消，这样就只是避免了挂起函数resume后继续执行后续代码造成例如崩溃的问题，但仍有可能造成内存泄漏。例如虽然取消了，但挂起函数中的线程还在执行的话，线程lambda就引用`suspendCancellableCoroutine`的`CancellableContinuation`，然后引用`ContinuationImpl`--> `suspend lambda` --> 外部类（比如activity、viewModel）。所以还是要做到实际取消才能避免内存泄漏。
+
 ### 异常处理
 在了解取消协程时，看到了使用`suspendCancellableCoroutine()`的挂起函数在取消时抛出`CancellationException`，已经涉及到了协程的异常，这里我们来了解协程对异常的处理方式。
 
 可以看到官方库中的`BaseContinuationImpl`类，`resumeWith`函数中的`invokeSuspend`函数会调用各个挂起函数，可以看到`invokeSuspend`是处于try-catch代码块中的，所以无论是抛出异常，还是`resume`传回异常，都是会使用Result类包裹处理。如果自己给挂起函数加上了try-catch，相当于异常由自己捕获了，而不会传给兜底的`invokeSuspend`外的try-catch。在例如要释放资源的时候，可以自己使用try-catch-finally捕获异常和释放资源。
+
+> 自己给挂起函数加上了try-catch，那么会在生成的invokeSuspend状态机代码中，也会给该函数外加上try-catch，如果直接抛异常则会被捕获，如果是resumeWithException的方式，因为每个状态开始都会调用`ResultKt.throwOnFailure($result)`，所以下一个状态会抛出前一个状态resumeWithException方式携带的异常，并且也被包含于try-catch中，所以对挂起函数加上了try-catch是可以自己处理异常，而不会引发协程自身的异常和取消逻辑。
 
 异常始终是会被catch住，并传给`AbstractCoroutine`，或者说Job。`AbstractCoroutine`判断是CancellationException就不会继续抛出，所以不会引发崩溃，而其他异常会继续抛出，官方代码中使用`handleOnCompletionException`，其中会先考虑协程上下文中是否设置了`CoroutineExceptionHandler`，如果设置了就让它处理，否则使用默认的线程异常处理器。但如果是使用 async 启动的协程，则异常在调用await函数时才会抛出。
 
