--- a/Android/Android架构/组件化和模块化.md
+++ b/Android/Android架构/组件化和模块化.md
@@ -10,6 +10,8 @@
 [网易友品 Android 客户端组件化演进](https://mp.weixin.qq.com/s/Xvx8hqjTA21sfaCvGEJSUw)
 [一篇文章搞懂Android组件化](https://mp.weixin.qq.com/s/g1XIJ7vPl5yj1_thuV6b9Q)
 [手把手带你 实践组件化](https://mp.weixin.qq.com/s/8_8gGpkpO2QFNkWgSRBwIg)
+https://juejin.cn/post/7033954652315975688?from=from_parent_mindnote
+https://juejin.cn/post/6844903457082572814?from=from_parent_mindnote
 
 多模块注意问题：
 [R.java 的生成规则](https://www.wanandroid.com/wenda/show/9067)
@@ -83,3 +85,12 @@ app依赖了模块test；test模块中的string.xml有个test_value；在test模
 https://github.com/darryrzhong/Android-MvvmComponent-App/blob/master/library-network/src/main/java/com/zhouyou/http/request/BaseBodyRequest.java
 
 https://github.com/Dawish/GoogleArchitectureDemo
+
+### 组件间通信
+一步步改进设计一个组件间通信库
+1. 直接使用反射，一是不好维护每个类的名称，二是性能略微降低
+2. 定义接口，它的实现类使用注解，然后编译时注解生成每个实现类对应的代理类，代理类都包含一个方法返回该实现类的实例，代理类的名称以接口名称再拼接Delegete之类的方式，然后可以通过拼接名称发射得到代理类，调用代理类的方法得到实现类实例。好维护了，但还是要反射
+3. 使用ASM修改字节码，将每个构造实现类实例的逻辑写在一个类中，if-else根据传入的接口的class返回它的实现类实例，都通过这个类去得到接口的实现类实例
+
+### 路由
+和组件间通信类似，对Activity加上注解，注解带上url，编译时注解生成一个类文件，用于包含路由表。跳转界面，读取路由表时，还需要反射该类；另外结合修改字节码的话，可以避免这个反射。
