协程笔记更新

--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -60,6 +60,7 @@ public interface CoroutineContext {
         if (context === EmptyCoroutineContext) this else // fast path -- avoid lambda creation
             context.fold(this) { acc, element ->
                 // 这里的整体逻辑就是当前上下文和参数的上下文中，如果有同一类型Key的元素，就去掉当前的，以参数上下文中的该类型元素为准
+                // removed就是去掉key对应的上下文之后，剩下的内容
                 val removed = acc.minusKey(element.key)
                 if (removed === EmptyCoroutineContext) element else {
                     // 对interceptor的特殊处理，目的是确保interceptor类型的上下文在组合的最后面，在获取时可以最快获取。
@@ -88,6 +89,7 @@ public interface CoroutineContext {
             @Suppress("UNCHECKED_CAST")
             if (this.key == key) this as E else null
 
+        // Elemnt类型fold内部只有一次遍历
         public override fun <R> fold(initial: R, operation: (R, Element) -> R): R =
             operation(initial, this)
 
@@ -116,6 +118,9 @@ internal class CombinedContext(
         }
     }
 
+    // fold函数是一个经典的遍历函数，每次遍历的返回值会作为下次遍历的第一个参数，第二个参数为当前位置的元素，经常用于累加之类的操作
+    // 递归调用left，如果left也是CombinedContext，继续递归，最终为以最深的left（一个非CombinedContext类型的上下文）开始遍历
+    // 第一次遍历，operation回调第一个参数为initial，第二个参数为当前element，之后第一个参数为前一次遍历的返回值
     public override fun <R> fold(initial: R, operation: (R, Element) -> R): R =
         operation(left.fold(initial, operation), element)
 
@@ -341,6 +346,8 @@ val time = measureTimeMillis {
 println("Completed in $time ms")
 ```
 使用 async 启动两次协程，分别执行挂起函数，只要调度器为线程池，最终的执行时间大约是执行较长的那个挂起函数的耗时，也就是说达到了并发执行的目的，对于没有依赖关系的多个任务可以使用这样的方式。但是如果调度器为Main这种单个线程的，则无法同时执行，结果为两个函数耗时之和。
+
+async启动根协程时才会在await()时抛出异常，否则会立即抛出
 
 用 launch 启动多个协程，也可以达到并发执行的目的。
 
