--- a/Kotlin/协程源码分析.md
+++ b/Kotlin/协程源码分析.md
@@ -60,7 +60,7 @@ public fun <R, T> (suspend R.() -> T).createCoroutine(
 还有 `startCoroutine` 函数，实际就是自动对 `createCoroutine` 函数调用 `resume` ,直接启动。
 
 #### 挂起
-`suspend lambda`的内容会被包装于 `BaseContinuationImpl`（是`Continuation`子类） 的 `invokeSuspend` 中，被触发 `resumeWith` 时，会调用 `invokeSuspend`，可以看到返回状态，会影响后续是否继续执行continuation还是真正挂起协程。如果没有挂起，就是 `invokeSuspend` 中直接返回了正常结果；如果挂起，返回的就是 `COROUTINE_SUSPENDED` ，`resumeWith` 将异步被调用，然后恢复协程执行。
+`suspend lambda`的内容会被包装于 `BaseContinuationImpl`（是`Continuation`子类） 的 `invokeSuspend` 中，被触发 `resumeWith` 时，会调用 `invokeSuspend`，可以看到返回状态，会影响后续是否继续执行continuation还是真正挂起协程。如果没有挂起，就是 `invokeSuspend` 中直接返回了正常结果；如果挂起，返回的就是 `COROUTINE_SUSPENDED` （SafeContinuation的作用），`resumeWith` 将异步被调用，然后恢复协程执行。
 
 而`invokeSuspend`的内容就是将原本的`suspend lambda`内调用的各个挂起函数，转换为状态机的形式
 
