Android动画笔记更新

--- a/Android/Android动画/属性动画.md
+++ b/Android/Android动画/属性动画.md
@@ -151,6 +151,8 @@ viewGroup.setLayoutTransition(layoutTransition);
 
 `LayoutTransition `可以调用`addTransitionListener(TransitionListener listener)`设置监听器，还有一些方法参考源码。如`setStagger`方法可以设置某个类型的动画的单个`item`延时，`setStagger(LayoutTransition.CHANGE_APPEARING, 30)`可以实现添加`view`改变容器中其他的`view`布局时，其他的`view`的动画的执行延时30ms，多个`view`依次延时；而`setStartDelay`方法是一起延时，同时动画。
 
+移除了view，却还能做动画的方式就是会调用 startViewTransition 方法将被移除的view缓存到mTransitioningViews和mDisappearingChildren中，绘制时即使已经不是子view，也会从mDisappearingChildren中去获取view并绘制。**Fragment**的转场动画也会用到这个方式
+
 ## 7.StateListAnimator（View状态改变时的动画，如pressed）
 `StateListAnimator`是**android 5.1**引入的，使用`StateListAnimator`可以在`View`状态变化时播放动画，例如`pressed`、`focused`等（效果类似`StateListDrawable`，只是这里是动画），它是`Animator`的包装类。
 ```
