Java相关细节记录

--- a/Java/泛型.md
+++ b/Java/泛型.md
@@ -125,6 +125,18 @@ List<Object> 是 List<? super Number> 的子类
 
 只能从中读取的对象为生产者，并称那些你只能写入的对象为消费者。所以泛型协变就是生产者，泛型逆变就是消费者
 
+> 为什么List<Super>不能是List<Sub>的父类？因为如果成立的话，如下代码就有问题：
+```
+// sub1List是List<Sub1>类型，Sub1和Sub2都是Super的子类
+
+// 如果List<Super>是List<Sub1>的父类，那么这里赋值可以成立，
+// List<Super>类型的superList也就可以往里面放sub2对象，这样就会导致sub1List里面放进了Sub2类型，引起异常
+List<Super> superList = sub1List;
+superList.add(sub2)
+```
+但有些场景，又需要这样，所以就有了协变和逆变，但都有相应的限制来避免异常。比如协变只能从里面读，不能写。
+
+
 ### 注意点
 泛型静态方法，泛型需要自行定义，无法依赖于类的泛型。例如：
 ```
