--- a/Java/集合.md
+++ b/Java/集合.md
@@ -2,7 +2,7 @@
 ArrayList内维护了一个Object类型的elementData数组
 
 构造函数，默认创建长度为0的Object数组，也可以明确设置初始长度
-```
+```java
 public ArrayList() {
     this.elementData = DEFAULTCAPACITY_EMPTY_ELEMENTDATA;
 }
@@ -20,7 +20,7 @@ public ArrayList(int initialCapacity) {
 ```
 
 添加元素的过程：
-```
+```java
 public boolean add(E e) {
     // 首先确保容量足够，传入最小容量为当前size加1
     ensureCapacityInternal(size + 1);  // Increments modCount!!
@@ -66,7 +66,7 @@ private void grow(int minCapacity) {
 
 
 删除元素，删除某个位置，则将它之后的全部元素整体复制前移
-```
+```java
 public E remove(int index) {
     if (index >= size)
         throw new IndexOutOfBoundsException(outOfBoundsMsg(index));
@@ -84,7 +84,7 @@ public E remove(int index) {
 }
 ```
 ## LinkedList
-```
+```java
 public boolean add(E e) {
     linkLast(e);
     return true;
@@ -110,7 +110,7 @@ void linkLast(E e) {
 ```
 
 删除第一个节点：
-```
+```java
 public E remove() {
     return removeFirst();
 }
@@ -155,7 +155,7 @@ private E unlinkFirst(Node<E> f) {
 [JDK 源码中 HashMap 的 hash 方法原理是什么？](https://www.zhihu.com/question/20733617)
 
 添加key-value：
-```
+```java
 public V put(K key, V value) {
     return putVal(hash(key), key, value, false, true);
 }
