--- a/Android/View/滑动冲突.md
+++ b/Android/View/滑动冲突.md
@@ -381,5 +381,7 @@ onNestedFling
 * https://chris.banes.dev/carry-on-scrolling/
 * https://juejin.cn/post/6844903761060577294
 
+> NestedScrollView在onInterceptTouchEvent中，通过getNestedScrollAxes判断了处于嵌套滚动，避免拦截子view的事件，但RecyclerlView只实现了NestedScrollingChild，而没有实现NestedScrollingParent，所以RecyclerView作为嵌套滚动的父级仍有问题，例如ViewPager2基于RecyclerView，所以作为嵌套滚动的父级需要额外处理。
+
 ## CoordinatorLayout和behavior
 嵌套滑动本质上是view之间相互通信、协调。CoordinatorLayout是NestedScrollingParent的子类，并且还介入了布局流程、事件分发等，相当于把嵌套滑动的协调思想，扩展到了布局流程、事件分发等。CoordinatorLayout作为嵌套滑动的parent、布局流程、事件分发的中间协调者，可以解耦CoordinatorLayout的各个child之间的协调操作。这部分我们在单独的文章中介绍。
