--- a/Android/View/触摸事件分发.md
+++ b/Android/View/触摸事件分发.md
@@ -47,8 +47,8 @@
                     intercepted = false;
                 }
             } else {
-                //既不是初始DOWN事件，也没有子View消费DOWN事件，就直接拦截，不再分发给子view，
-                //也就是子View不消费DWON，就不会再给子分发事件。
+                // 既不是初始DOWN事件，也没有子View消费DOWN事件，就直接拦截，不再分发给子view，
+                // 也就是子View不消费DWON，就不会再给子分发事件。
                 intercepted = true;
             }
             ......
@@ -116,6 +116,7 @@
                             if (newTouchTarget != null) {
                                 // 把当前手指Id也合并到TouchTarget中
                                 newTouchTarget.pointerIdBits |= idBitsToAssign;
+                                // 多点触控的情况，跳出循环，在后面的代码处理
                                 break;
                             }
 
@@ -176,7 +177,7 @@
             if (mFirstTouchTarget == null) {
                 // 进入这里就是没有child或child没有消费首个DOWN（包括拦截的情况），则把此ViewGroup当成View处理,
                 //这时传入的参数，会实际调用自身的super.dispatchTouchEvent即View的dispatchTouchEvent
-                //就是用自身的OnTouchListener和onTouchEvent来处理
+                //就是用自身的OnTouchListener和onTouchEvent来处理，其他move、up事件因为mFirstTouchTarget一直为null，所以也会一直自己处理
                 handled = dispatchTransformedTouchEvent(ev, canceled, null,
                         TouchTarget.ALL_POINTER_IDS);
             } else {
@@ -190,14 +191,15 @@
                 while (target != null) {
                     final TouchTarget next = target.next;
                     if (alreadyDispatchedToNewTouchTarget && target == newTouchTarget) {
-                        //DOWN事件且以及被child消费
+                        // DOWN事件且被child消费，就直接给 handled 赋值为true，避免down事件重复分发，
                         handled = true;
                     } else {
-                        //其他事件，先获取cancelChild值，被拦截或child设置了cancel up，则为true
+                        // 分发其他事件时，alreadyDispatchedToNewTouchTarget会重新赋值为false，所以会走这里
+                        // 其他事件，先获取cancelChild值，被拦截或child设置了cancel up，则为true
                         final boolean cancelChild = resetCancelNextUpFlag(target.child)
                                 || intercepted;
-                        //将cancelChild作为参数传入dispatchTransformedTouchEvent方法，为false就传递正常事 
-                        //件给child，若为true就会传递cancel事件给child。可知拦截就会给child传递cancel事件。
+                        // 将cancelChild作为参数传入dispatchTransformedTouchEvent方法，为false就传递正常事 
+                        // 件给child，若为true就会传递cancel事件给child。可知拦截就会给child传递cancel事件。
                         if (dispatchTransformedTouchEvent(ev, cancelChild,
                                 target.child, target.pointerIdBits)) {
                             handled = true;
