--- a/Java/类路径和类加载器.md
+++ b/Java/类路径和类加载器.md
@@ -9,11 +9,11 @@
 
 > **注意：**`javac`编译器总会在当前目录查找文件，但Java虚拟机仅在类路径中有“.”目录时才查看当前目录。如果没有设置类路径可能会导致通过编译但是不能运行。
 
-####1.1 虚拟机查找类文件
+### 1.1 虚拟机查找类文件
 1. 先查找存储在jre/lib和jre/lib/ext目录中的系统类文件
 2. 找不到就到类路径中列出的路径去查找
 
-#### 1.2 编译器查找类文件
+### 1.2 编译器查找类文件
 1. 先在类路径中查找import的所有包名对应的目录（java.lang包被默认导入）
 2. 没有就从当前目录中对应包名路径查找
 
