Android优化笔记更新

--- a/Android/优化/内存优化.md
+++ b/Android/优化/内存优化.md
@@ -17,6 +17,9 @@ https://juejin.im/post/6844904099998089230#heading-187
 |RSS|Resident Set Size|物理内存|RSS=USS+共享库|
 |VSS|Virtual Set Size|虚拟内存|VSS=RSS+未分配实际物理内存|
 
+### Linux自带命令
+top等
+
 ### OOM大小限制
 获取当前OOM的限制阈值，可以通过命令或者代码的方式：
 ```
@@ -70,7 +73,7 @@ MAT的下载路径：https://www.eclipse.org/mat/downloads.php
 * Retained Size:  对象本身占用的内存大小 + 对象直接或间接引用的对象本身占用的内存大小
 
 ### LeakCanary
-`LeakCanary` 检测Android中 `Activity` 和 `Fragment` 内存泄漏的便捷工具
+`LeakCanary` 检测Android中 `Activity` 和 `Fragment` 内存泄漏的便捷工具（内部使用的heap分析工具shark或haha库）
 
 [LeakCanary官方文档](https://square.github.io/leakcanary/getting_started/)
 [LeakCanary 2 原理分析](https://juejin.im/post/6844903876043210759)
@@ -79,6 +82,8 @@ MAT的下载路径：https://www.eclipse.org/mat/downloads.php
 
 检测内存泄漏的方式是弱引用 `WeakReference` 和 `ReferenceQueue`，
 
+> 为什么不直接使用 `WeakReference.get()` 判断是否为null来确定对象是否被回收？因为调用后，如果不为null，则当前栈会引用该对象，导致增加了该对象的生命周期，影响回收。https://github.com/square/leakcanary/issues/1262
+
 ### HPROF文件
 http://hg.openjdk.java.net/jdk6/jdk6/jdk/raw-file/tip/src/share/demo/jvmti/hprof/manual.html
 
@@ -86,11 +91,13 @@ http://hg.openjdk.java.net/jdk6/jdk6/jdk/raw-file/tip/src/share/demo/jvmti/hprof
 * 处理内存泄漏：包括app的泄漏和系统代码的泄漏
 * 根据设备分级，低端机可关闭复杂动画或其他功能，减少内存缓存，使用画质一般的图片。
 * 空进程也会占10M的内存，所以要减少没必要的进程
-* Bitmap优化（分辨率、色彩通道、缓存数量）
-* 控制线程数量
+* Bitmap优化（分辨率、色彩通道、缓存数量）、线下大图检测（可操作字节码hook ImageView，对比图片和ImageView的宽高）
+* 控制线程数量，可以使用操作字节码监控线程创建
 * 监控 定时获取并上报（一般项目没有资源条件）
 * 64位应用可以使用更多内存，减少oom
 * 及时释放缓存、调整引用关系
+* 选择占用内存少的数据结构、减少枚举
+* 内存复用（对象池）
 
 安装包中的代码、资源、图片和so库
 ||classes.dex|Bitmaps|resource|.so文件|
@@ -117,7 +124,15 @@ float proportion = (float) javaUsed / javaMax;
 * onTrimMemory 的level参数，例如TRIM_MEMORY_UI_HIDDEN，是应用内所有UI组件都隐藏时，这时我们可以释放UI相关的资源，比如缓存，还有其他各种值对应不同的情况
 
 ## 内存监控
-一般在发生OOM或者一定阈值时，通过`Debug.dumpHprofData("path")`获取内存快照，然后传回服务器，开发人员再根据内存快照分析。但要注意两个点，一是dump过程会暂停所有线程，容易造成卡顿和ANR，常用做法为在后台才执行或者fork后在子进程执行dump；二是快照文件会很大，需要做裁剪和压缩，但dump后会先占用大量存储空间，更高效的就是在dump时hook系统调用`open`和`write`，在写入过程就过去掉了要裁剪的数据。可以参考[快手KOOM](https://github.com/KwaiAppTeam/KOOM)和[字节的tailor](https://github.com/bytedance/tailor)
+一般在发生OOM或者一定阈值时，通过`Debug.dumpHprofData("path")`获取内存快照，然后传回服务器，开发人员再根据内存快照分析。但要注意两个点，一是dump过程会暂停所有线程，容易造成卡顿和ANR，常用做法为在后台才执行或者fork后在子进程执行dump；二是快照文件会很大，需要做裁剪（比如去掉String的数组和Bitmap的像素信息）和压缩，但dump后会先占用大量存储空间，更高效的就是在dump时hook系统调用`open`和`write`，在写入过程就过去掉了要裁剪的数据。可以参考[快手KOOM](https://github.com/KwaiAppTeam/KOOM)和[字节的tailor](https://github.com/bytedance/tailor)以及微信的Matrix。
+
+通过上传的内存快照，可以分析图片Bitmap、内存泄漏、大对象、数量多的小对象这几种情况。
+
+仅监控内存水位的话，在onTrimMemory、onLowMemory时，使用Debug、ActivityManager和runtime就可以得到Java内存情况，Debug.getNativeHeapAllocatedSize得到native内存信息
+
+内存泄漏线上监控：检测和leakCanary类似。可以使用addIdleHandler在空闲时回调的时候主动移除activity的背景、所有view的background、ImageView的图片、TextView的CompoundDrawables等资源，降低内存泄漏的影响。然后上报Activity的类名，完善的话，可以dump后上报引用链。
+
+可以一两分钟检测一次内存情况，并上报
 
 ### Native内存泄漏监控
 参考：[字节Raphael](https://juejin.cn/post/6953430618726203399)
