--- a/Android/优化/启动优化.md
+++ b/Android/优化/启动优化.md
@@ -1,5 +1,18 @@
 [官方文档](https://developer.android.google.cn/topic/performance/vitals/launch-time)
 
+## 过程
+1. Application
+    1. bindApplication
+    2. attachBaseContext：multidex加载优化。这里是最早的预加载时机
+    3. installProvider
+    4. onCreate
+2. handle message：消息监控和调度优化
+3. Activity
+    1. onCreate：业务优化、View优化
+
+可以用onWindowFocusChanged作为启动过程的终点
+
+通用优化：任务调度框架、类重排、IO预加载、全局通用性框架优化等
 
 ## 获取启动耗时的工具
 ```
@@ -45,8 +58,10 @@ Complete
 主要还是使用例如卡顿优化、内存优化、I/O优化等方式
 
 ## 思路
+选择更快的、不做、提前做、延后做、并发做、缓存、空间换时间
+
 * 启动过程全路径流程：bindApplication、attachBaseContext、installProvider、app onCreate、activity onCreate、setContentView、view渲染、主线程的各任务
-* 耗时成因分析：CPU Time、CPU调度、IO阻塞、锁等待、跨进程 
+* 耗时成因分析：CPU Time（反射、循环、序列化、类解析等）、CPU调度、IO阻塞、锁等待、跨进程 
 * 以线上数据为准
 * 常规优化：延迟、异步、缓存、懒加载，分帧绘制 
 * 系统优化：并发、线程优先级、主线程消息调度
