--- a/Android/优化/网络优化.md
+++ b/Android/优化/网络优化.md
@@ -17,11 +17,14 @@ https://blog.helong.info/blog/2015/09/07/tls-protocol-analysis-and-crypto-protoc
 2. 缓存
 3. socket连接池
 4. 使用protobuf格式，而不是json
-5. 业务变更，及时调整冗余的json数据
+5. 业务变更，及时调整冗余的json数据，精简request和response的数据
 6. 使用gzip压缩
 7. 减少请求次数
+8. 图片大小确定，比如http请求图片时，带上宽高信息，服务端放置几个档位大小的图片，由服务端选择最适合的下发
 
 http 1.1 长连接keep-alive  cache-control
 http 2.0 二进制、多路复用、头部压缩、服务器推送：服务器可以额外的向客户端推送资源，而无需客户端明确的请求
 
 dns服务商出问题，可以使用第三方dns来兜底
+
+TrafficStats.getUidRxBytes可用于代码中网络测速
