优化方式更新

--- a/Android/优化/启动优化.md
+++ b/Android/优化/启动优化.md
@@ -50,7 +50,7 @@ Complete
 * 异步预加载Class、方法改为字段、常量内联（修改字节码）
 * 异步预加载Drawable，根据Systrace查找耗时明显的
 * 减少任务数：不启动子进程、减少主界面之前的activity跳转、懒加载、缓存每次启动要用到的数据、减少不必要的网络请求
-* dex优化
+* dex优化：class load的时候，相邻的class也会被load，所以将关联的class放在一起
 * 修改字节码
 * 语言层面优化：反射、内联、Kotlin语法糖
 * 虚拟机优化：关闭verify class（不稳妥）、GC抑制、主动触发AOT优化 
