--- a/Android/优化/网络优化.md
+++ b/Android/优化/网络优化.md
@@ -14,17 +14,44 @@ https://blog.helong.info/blog/2015/09/07/tls-protocol-analysis-and-crypto-protoc
 监控 Okhttp事件监听，确定每一步的耗时
 
 1. dns优化，缓存域名对应的ip，之后访问直接使用ip
-2. 缓存
+2. http协议的各种缓存配置
 3. socket连接池
 4. 使用protobuf格式，而不是json
 5. 业务变更，及时调整冗余的json数据，精简request和response的数据
 6. 使用gzip压缩
 7. 减少请求次数
-8. 图片大小确定，比如http请求图片时，带上宽高信息，服务端放置几个档位大小的图片，由服务端选择最适合的下发
+8. 图片大小确定，比如http请求图片时，带上宽高信息，服务端放置几个档位大小的图片，由服务端选择最适合的下发，并使用webp等格式
 
 http 1.1 长连接keep-alive  cache-control
 http 2.0 二进制、多路复用、头部压缩、服务器推送：服务器可以额外的向客户端推送资源，而无需客户端明确的请求
+http各种细节使用，比如head请求，只获取http响应的head
 
 dns服务商出问题，可以使用第三方dns来兜底
 
 TrafficStats.getUidRxBytes可用于代码中网络测速
+
+
+浏览器对于同一域名下的同时存在连接数有限制，例如Chrome是6个。
+
+http 1.1提出长链接和管道化
+* 长连接：在一个socket连接上可以传输多个请求/响应。但只能串行传输，并发需要多个连接。
+* 管道化：在长连接基础上，支持同时发送多个请求，服务器可以同时处理多个请求，但是必须按照请求的顺序返回响应结果。（所以可能存在如果第一个请求未处理完成，即使后续请求的结果已完成但仍需阻塞等待的问题）
+
+而http 2.0的多路复用，可以同时传输多个请求/响应，而不需要按照请求的顺序。因为http 2.0的消息传输基于二进制流，可以将消息分为多个帧，交错发送，在另一端通过帧的标识重新组装。
+
+
+单个socket连接，有速度限制，所以并发下载http2并不一定比http1.1下载快，而且有些服务端可能对单个连接限速，操作系统也会给多个连接分散，所以连接多利于分到更多带宽
+4个连接比较合适
+
+
+分片下载不能在http2使用，因为http2是一个域名单个连接？？？
+下载和普通http请求，可以分开使用协议
+
+多线程下载，读写线程可以分开，因为网络下载读取一般更慢，而写入磁盘很快，所以可以多个下载线程，写入内存队列，一个线程读内存队列写入磁盘
+
+分块方案
+md5可能碰撞，再加上length？大文件md5不能全部读入内存，MessageDigest支持分步多次传入计算
+需要服务端配合记录已上传的分块
+
+
+CDN（内容分发网络）：一批分布在不同地理位置的服务器，用户访问就近的服务器，这些服务器再和源服务器通信，通过源服务器拿到数据就会缓存在CDN服务器。可能有多层缓存服务器。域名配置CDN CNAME
