--- a/Android/优化/内存优化.md
+++ b/Android/优化/内存优化.md
@@ -89,9 +89,10 @@ http://hg.openjdk.java.net/jdk6/jdk6/jdk/raw-file/tip/src/share/demo/jvmti/hprof
 
 ## 内存优化方式 
 * 处理内存泄漏：包括app的泄漏和系统代码的泄漏
+* 资源对象使用完确保关闭，例如数据库Cursor、文件（每个进程fd文件描述符数量有上限，例如1024）、广播BroadcastReceiver
 * 根据设备分级，低端机可关闭复杂动画或其他功能，减少内存缓存，使用画质一般的图片。
 * 空进程也会占10M的内存，所以要减少没必要的进程
-* Bitmap优化（分辨率、色彩通道、缓存数量）、线下大图检测（可操作字节码hook ImageView，对比图片和ImageView的宽高）
+* Bitmap优化（分辨率、色彩通道、缓存数量）、及时回收Bitmap、线下大图检测（可操作字节码hook ImageView，对比图片和ImageView的宽高）
 * 控制线程数量，可以使用操作字节码监控线程创建
 * 监控 定时获取并上报（一般项目没有资源条件）
 * 64位应用可以使用更多内存，减少oom
@@ -128,11 +129,14 @@ float proportion = (float) javaUsed / javaMax;
 
 通过上传的内存快照，可以分析图片Bitmap、内存泄漏、大对象、数量多的小对象这几种情况。
 
-仅监控内存水位的话，在onTrimMemory、onLowMemory时，使用Debug、ActivityManager和runtime就可以得到Java内存情况，Debug.getNativeHeapAllocatedSize得到native内存信息
+仅监控内存水位的话，在onTrimMemory、onLowMemory时，使用Debug、ActivityManager和runtime就可以得到Java内存情况，Debug.getNativeHeapAllocatedSize得到native内存信息。或者直接轮询获取。
 
 内存泄漏线上监控：检测和leakCanary类似。可以使用addIdleHandler在空闲时回调的时候主动移除activity的背景、所有view的background、ImageView的图片、TextView的CompoundDrawables等资源，降低内存泄漏的影响。然后上报Activity的类名，完善的话，可以dump后上报引用链。
 
 可以一两分钟检测一次内存情况，并上报
+
+## 资源泄漏监控
+fd监控：轮询 /proc/pid/fd/ 获取当前进程的fd数量。或者做一些native hook监控open等函数？
 
 ### Native内存泄漏监控
 参考：[字节Raphael](https://juejin.cn/post/6953430618726203399)
