基础笔记更新

--- a/C与Linux/并发编程.md
+++ b/C与Linux/并发编程.md
@@ -2,7 +2,7 @@
 
 ## 2. I/O多路复用
 
-I/O multiplexing（通常翻译为多路复用，多路指多个IO，复用指复用一个线程） 这里面的 multiplexing 指的其实是在单个线程通过记录跟踪每一个Sock(I/O流)的状态来同时管理多个I/O流. 发明它的原因，是尽量多的提高服务器的吞吐能力。
+I/O multiplexing（通常翻译为多路复用，多路指多个IO，复用指复用一个线程） 这里面的 multiplexing 指的其实是在单个线程通过记录跟踪每一个Socket(I/O流)的状态来同时管理多个I/O流. 发明它的原因，是尽量多的提高服务器的吞吐能力。
 
 I/O多路复用可以用作事件驱动程序的基础，所以也称为事件驱动I/O，
 
@@ -24,11 +24,13 @@ int poll (struct pollfd *fds, unsigned int nfds, int timeout);
 Android中的事件驱动模型的基础
 ```
 int epoll_create(int size)；//创建一个epoll的文件描述符，size用来告诉内核这个监听的数目一共有多大
-int epoll_ctl(int epfd, int op, int fd, struct epoll_event *event)； //事件注册函数，将需要监听的事件和需要监听的fd交给epoll对象
+int epoll_ctl(int epfd, int op, int fd, struct epoll_event *event)； //事件注册函数，将需要监听的事件和需要监听的fd交给epoll对象，执行多次就可以监听多个fd
 int epoll_wait(int epfd, struct epoll_event * events, int maxevents, int timeout); //等待注册的事件被触发或者timeout发生
 ```
 
 [Linux IO模式及 select、poll、epoll详解](https://segmentfault.com/a/1190000003063859)
+
+以基本的Socket为例，一个线程同一时间只能阻塞监听一个IO，所以需要很多线程阻塞监听，并且多数时间都是在阻塞等待而没有实际工作。而IO多路复用则可以一个线程同一时间阻塞监听多个IO。（监听到IO请求之后处理IO请求一般仍然需要多线程）
 
 ## 3. 多线程
 &emsp;&emsp;线程 就是运行在进程上下文中的逻辑流。每个线程都有它自己的线程上下文，包括一个唯一的整数线程ID、栈、栈指针、程序计数器、通用目的寄存器和条件码。所有的运行在一个进程里的线程共享该进程的整个虚拟地址空间。
