--- a/Kotlin/协程源码分析.md
+++ b/Kotlin/协程源码分析.md
@@ -91,6 +91,8 @@ suspendCoroutine函数是suspendCoroutineUninterceptedOrReturn函数的包装，
 
 Continuation Passing Style  ==  Callback，将continuation传到内部，而不必返回。
 
+CoroutineStart重写了invoke操作符，所以它本身可以调用，launch函数内部调用coroutine.start，也就会调用CoroutineStart.invoke
+
 ## withContext
 拦截器（调度器）不同的话，withContext内会创建一个DispatchedCoroutine，作为Job（AbstractCoroutine）来接收协程结果，然后启动一个协程（ContinuationImpl）
 ```
