添加Kotlin协程代码分析记录

--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -284,6 +284,9 @@ println("main: Now I can quit.")
 
 > 如果状态被取消，而业务逻辑代码没有被实际取消，这样就只是避免了挂起函数resume后继续执行后续代码造成例如崩溃的问题，但仍有可能造成内存泄漏。例如虽然取消了，但挂起函数中的线程还在执行的话，线程lambda就引用`suspendCancellableCoroutine`的`CancellableContinuation`，然后引用`ContinuationImpl`--> `suspend lambda` --> 外部类（比如activity、viewModel）。所以还是要做到实际取消才能避免内存泄漏。
 
+
+> withContext和suspendCancellableCoroutine支持取消的方式不一样，withContext是创建了一个子协程（Coroutine），因为创建新协程就会创建新的Job并关联父级Job，所以withContext支持取消，而suspendCancellableCoroutine是通过包装Continuation来支持取消
+
 ### 异常处理
 在了解取消协程时，看到了使用`suspendCancellableCoroutine()`的挂起函数在取消时抛出`CancellationException`，已经涉及到了协程的异常，这里我们来了解协程对异常的处理方式。
 
@@ -464,6 +467,9 @@ suspend fun foo(): String {
 所以`supervisorScope`和`coroutineScope`还有一个作用是在挂起函数中方便启动协程，因为挂起函数中不方便访问作用域，而`supervisorScope`和`coroutineScope`创建了一个作用域。**并且`supervisorScope`和`coroutineScope`这两个挂起函数，都会等到它们内部创建的所有协程执行完后才会返回**，源码中在所有子协程执行完后才会调用Continuation的resume。
 
 当一个协程被取消的时候，所有它的子协程也会被递归的取消。
+
+## Mutex
+协程的mutex锁不可重入 https://github.com/Kotlin/kotlinx.coroutines/issues/1686
 
 ## 参考
 https://github.com/enbandari/CoroutineLite 用于学习的简化版协程
