--- a/Java/注解处理器.md
+++ b/Java/注解处理器.md
@@ -1,12 +1,12 @@
 运行时注解使用反射，比较简单，这里分析编译时注解的使用。
-## 1.概述
+# 1.概述
 &emsp;&emsp;注解处理器运行在它自己的Java虚拟机进程中，Javac编译代码时启动一个完整Java虚拟机进程来运行注解处理器，意味着可以使用任何在其他Java应用中使用的的东西。
 
 编译时注解位于`javax.annotation.processing`包中
 而用来为Java编程语言建立模型的是`javax.lang.model`包，接口`AnnotatedConstruct`表示可以被注解的结构，它要么是元素（`Element`接口）要么是类型（`TypeMirror`接口）。从`ElementKind`和`TypeKind`中可见，元素包括`CLASS`、`INTERFACE`、`ENUM`、`ANNOTATION_TYPE`、`FIELD`、`METHOD`等，类型包括`INT`、`BOOLEAN`等基本类型及`EXECUTABLE`（可执行类型包括方法、构造器和初始代码块）等。感觉是从两种角度对结构分类。`Element`的`asType()`可以获得元素的类型。
 
-## 2.Processor接口
-&emsp;&emsp;注解处理发生在一系列的轮次中，在每一轮中，处理器被要求调用`process`方法处理在前一轮产生的源文件和类文件上找到的注解的子集。第一轮处理的输入是工具运行的初始输入，这些初始输入可以被视为虚拟第0轮处理的输出。如果要求处理器在给定轮次上进行处理，则会要求处理后续轮次，包括最后一轮，即使没有要处理的注解。工具基础设施（应该是指Java编译工具）还可以要求处理器处理由工具的操作隐式生成的文件。
+# 2.Processor接口
+&emsp;&emsp;注解处理发生在一系列的轮次中，在每一轮中，处理器被要求调用`process`方法处理在前一轮产生的源文件和类文件（字节码文件）上找到的注解的子集。第一轮处理的输入是工具运行的初始输入，这些初始输入可以被视为虚拟第0轮处理的输出。如果要求处理器在给定轮次上进行处理，则会要求处理后续轮次，包括最后一轮，即使没有要处理的注解。工具基础设施（应该是指Java编译工具）还可以要求处理器处理由工具的操作隐式生成的文件。
 
 > 这也就是说我们实现的`process`方法有可能会被调用多次，因为我们生成的Java文件也有可能会包含相应的注解。例如，我们的源文件为SourceActivity.java，生成的文件为Generated.java，这样就会有三次循环，第一次输入为SourceActivity.java，输出为Generated.java；第二次输入为Generated.java，输出并没有产生新文件；第三次输入为空，输出为空。但如果生成的代码也有相应注解，则可能会处理更多次。如果只是产生普通文件如txt，则只会有两次循环，第一次输入为SourceActivity.java，输出为空，第二次输入为空，输出为空。
 
@@ -21,7 +21,7 @@
 
 每次循环都会调用`process`方法，`process`方法提供了两个参数，第一个是我们请求处理注解类型的集合（也就是我们通过重写getSupportedAnnotationTypes方法所指定的注解类型），第二个是有关当前和上一次 循环的信息的环境。
 
-#### 2.1 init方法
+## 2.1 init方法
 `void init(ProcessingEnvironment processingEnv)`
 用`ProcessingEnvironment`初始化处理器
 `ProcessingEnvironment `参数是工具框架提供给处理器的设备环境，它可以提供`Filer`来创造源文件、类文件、资源文件，或者`Messager`打印信息，或者`Elements`来操作元素，等。
@@ -35,11 +35,15 @@
 |Types getTypeUtils()|返回实现Types接口的对象，用于操作类型的工具类|
 |...|...|
 
+**`ProcessingEnvironment`中的`getElementUtils()`和`getTypeUtils()`可以用于处理Element和Type**
+
 #### 2.2 getSupportedAnnotationTypes
 `Set<String> getSupportedAnnotationTypes()`
 返回支持的注解全称字符串集合，注解全称字符串一般使用`MyAnnotation.class.getCanonicalName()`。或者可以是`name.*`形式，表示具有以`name`开头的规范名称的所有注解类型的集合。`*`表示所有注解类型的集合，但不要这样声明，除非实际处理所有文件，声明不必要的注解会导致某些环境性能下降。*可以通过注解设定*
 
-#### 2.3 getSupportedOptions
+> **如果返回空集合，也就是不支持任何注解，注解处理器将不会被执行，并能在kapt gradle task中看到打印提示**
+
+## 2.3 getSupportedOptions
 `Set<String> getSupportedOptions()`
 返回处理器要识别的选项。如果执行注解处理器时输入了其中的选项，则可以通过`ProcessingEnvironment `的`getOptions()`方法得到。*可以通过注解设定*
 
@@ -53,25 +57,25 @@ javaCompileOptions {
       }
     }
 
-#### 2.4 getSupportedSourceVersion
+## 2.4 getSupportedSourceVersion
 `SourceVersion getSupportedSourceVersion()`
 返回此注解处理器支持的最新源码版本。
 
-#### 2.5 process
+## 2.5 process
 `boolean process(Set<? extends TypeElement> annotations,
                     RoundEnvironment roundEnv)`<br/>
 `annotations`：要求被处理的注解类型集合<br/>
 `roundEnv`：有关当前和上一轮信息的环境<br/>
-`返回值`：true表示已处理当前注解类型集合，后续处理器不需处理，false表示后续处理器需要处理（**估计是多个注解处理器的情况下会有作用，每一轮处理一次调用每个处理器的process**）
+`返回值`：true表示已处理当前注解类型集合，后续处理器不需处理，false表示后续处理器需要处理（针对的是多个注解处理器的情况下`getSupportedAnnotationTypes`返回值相同的其他处理器）
 
 在这里写扫描、评估和处理注解的代码，以及生成Java文件。输入参数RoundEnviroment，可以让你查询出包含特定注解的被注解元素
 
-#### 2.6 getCompletions
-暂不明
+## 2.6 getCompletions
+接口`Processor`中的的注释可以看到作用。可用于帮助IDE提示用户。
 
 
-## 3. 重要概念
-#### 3.1 元素
+# 3. 重要概念
+## 3.1 元素
 `Element`接口继承了`AnnotatedConstruct`接口，表示一个程序元素，比如包、类、或者方法，*每个元素表示一个静态的、语言级别的结构，而不是虚拟机中的运行时结构*。以下元素类型接口继承了`Element`接口：
 |类型|说明|
 |--|--|
@@ -121,7 +125,7 @@ if (element.getKind() == ElementKind.CLASS) { //正确
 |INSTANCE_INIT|实例初始代码块|
 |TYPE_PARAMETER|类、接口和方法中的泛型类型参数|
 |...|...|
-#### 3.2 类型
+## 3.2 类型
 `TypeMirror`接口继承了`AnnotatedConstruct`接口，表示Java编程语言中的类型。类型包括基本类型、声明类型（类和接口）、数组类型、类型变量、和空类型。还可以表示通配符类型参数、executable 的签名和返回类型，以及对应于包和关键字 void 的伪类型。下表是继承自`TypeMirror`的接口：
 |类型|说明|
 |--|--|
@@ -153,39 +157,46 @@ if (element.getKind() == ElementKind.CLASS) { //正确
 |EXECUTABLE|方法、构造函数、初始代码块|
 |...|...|
 
-#### 3.3 创建文件
-&emsp;&emsp;`Filer`接口支持注解处理器创建新文件。以这种方式创建的文件将为实现此接口的注解处理工具所知，更好地使工具能够管理它们。在用于写入文件内容的`Writer`或`OutputStream`上调用`close`方法之后，将在后续的一轮处理中考虑由此工具创建的源文件和类文件。区分三种文件：源文件，类文件和辅助资源文件。
+## 3.3 创建文件
+&emsp;&emsp;`Filer`接口支持注解处理器创建新文件。以这种方式创建的文件将为实现此接口的注解处理工具所知，更好地使工具能够管理它们。在用于写入文件内容的`Writer`或`OutputStream`上调用`close`方法之后，将在后续的一轮处理中考虑由此工具创建的源文件和类文件，也就是会被注解处理器继续处理。区分三种文件：源文件，类文件和辅助资源文件。
 
 命令行中`javac`的`-s`和`-d`可以指定生成的源文件和类文件的放置路径。
-###### 3.3.1 创建源文件
+### 3.3.1 创建源文件（.java）
 ```
 JavaFileObject createSourceFile(CharSequence name,
                                     Element... originatingElements) 
                                     throws IOException
 ```
-`name`参数为生成的源文件的全限定名称，如"com.hfy.A"，则将产生com/hfy/A.java
-`originatingElements`变长参数，一般不用传值，表示与此文件的创建有因果关联的类型或包元素。此参数用于增量环境，官方文档意思应该是增量编译环境（对应全量编译环境）时，用于判断是否需要重新运行注解处理器或者删除已生成的文件。非增量环境则忽略此参数。例如：
-```
-//这个类将被注解处理器处理
-@Generate
-public class UserSource {}
+`name`参数为生成的源文件的全限定名称，如"com.hfy.A"，则将产生com/hfy/A.java。也可以生成`package-info.java`
+`originatingElements`变长参数，一般不用传值，表示与此文件的创建有因果关联的类型或包元素。**但是看jdk源码`com.sun.tools.javac.processing.JavacFiler`并没有使用。**
 
-//然后在注解处理器中传入该类的对应的元素，表示文件的创建与该类有关系。猜测如果删除该类的@Generate注解，进行增量编译，则生成的类文件将被删除。
-filer.createSourceFile("GeneratedFromUserSource",
-                             eltUtils.getTypeElement("UserSource"));
-```
-
-此方法创建一个新的源文件并返回一个对象以允许写入它。文件的名称和路径（相对于源文件的根输出位置）基于要在该文件中声明的类型。如果声明了多个类型，则应使用主要顶级类型的名称（例如，公共类型）。
+此方法创建一个新的源文件并返回一个对象用于写入。文件的名称和路径（相对于源文件的根输出位置）基于要在该文件中声明的类。如果声明了多个类，则应使用主要顶级类的名称（例如，公共类）。
 `package-info.java`：还可以创建源文件以保存有关包的信息，包括包注解，要为已命名的包创建包信息源文件，请将name作为包的名称，后跟“.package-info”;要为未命名的包创建源文件，请使用“package-info”
 
-###### 3.3.2 创建类文件
+> 以Android Gradle工程使用kapt为例，生成的代码会放到模块的`build/generated/source/kapt`中
+
+### 3.3.2 创建类文件（.class）
 ```
 JavaFileObject createClassFile(CharSequence name,
                                    Element... originatingElements)
                                    throws IOException
 ```
 
-###### 3.3.3 创建辅助资源文件
+使用示例
+```
+// 创建classFile
+val fileObject = processingEnv.filer.createClassFile("com.example.demo.Test")
+val os = fileObject.openOutputStream()
+// 这里为了方便是把另一个字节码文件数据写入classFile。实际也可以使用javassist、asm等方式编写字节码。
+val classFileByteArray = File("xx/xx/xx/Test.class").readBytes()
+os.write(classFileByteArray)
+os.close()
+```
+生成`.class`文件后，流程和生成源码文件类似，也会作为输入执行下一轮process。
+
+> 以Android Gradle工程使用kapt为例，生成的代码会放到模块的`build/tmp/kapt3/classes/xx/xx/xx/xx.class`中，“xx”表示包名路径和类名站位。
+
+### 3.3.3 创建辅助资源文件
 ```
 FileObject createResource(JavaFileManager.Location location,
                              CharSequence pkg,
@@ -193,7 +204,7 @@ FileObject createResource(JavaFileManager.Location location,
                              Element... originatingElements) throws IOException
 ```
 
-###### 3.3.5 读取存在的文件
+### 3.3.5 读取存在的文件
 ```
 FileObject getResource(JavaFileManager.Location location,
                            CharSequence pkg,
@@ -201,7 +212,7 @@ FileObject getResource(JavaFileManager.Location location,
 ```
 > Square的开源库`JavaPoet`更简单易用用于生成代码
 
-#### 3.4 打印信息
+## 3.4 打印信息
 &emsp;&emsp;`Messager`为注解处理器提供报告错误信息、警告和其他提示的方式。可以传递元素，注解和注解值以提供消息的位置提示。但是，此类位置提示可能不可用或仅是近似值。
 &emsp;&emsp;如果打印了错误信息，那么下一轮次的处理中可以通过`RoundEnvironment.errorRaised()`方法得知前一轮是否产生错误。
 &emsp;&emsp;注意：此接口中的方法“打印”的消息可能会或可能不会显示为System.out或System.err等位置的文本输出。具体实现可以选择以不同的方式呈现该信息，例如窗口中的消息。
@@ -212,7 +223,13 @@ FileObject getResource(JavaFileManager.Location location,
 |printMessage(Diagnostic.Kind kind, CharSequence msg, Element e, AnnotationMirror a)|在带注解的元素的AnnotationMirror的位置打印指定类型的消息。|
 |printMessage(Diagnostic.Kind kind, CharSequence msg, Element e, AnnotationMirror a, AnnotationValue v) | 在注解元素的AnnotationMirror内的注解值的位置处打印指定类型的消息。 |
 
-#### 3.5 执行处理器和配置选项参数
+> `Diagnostic.Kind.ERROR`会导致**编译流程失败**，不要当成简单的错误打印使用。
+
+## 3.5 获取注解元素
+在`process`方法中，可以通过`RoundEnvironment`来获取注解元素。
+
+# 4. 工程中的注意点
+## 4.1 执行处理器和配置选项参数
 * 注册注解处理器：<br/>
 
 1. 打包jar的情况要按目录
@@ -278,5 +295,44 @@ android {
 }
 ```
 
-#### 3.6 获取注解元素
-在`process`方法中，可以通过`RoundEnvironment`来获取注解元素。
+## 4.2 配置验证
+* 如果`getSupportedAnnotationTypes`返回空，也就是没有支持任何注解类型，虽然会构造Processor实例（因为要调用它的`getSupportedAnnotationTypes`方法），但不会实际执行`process`，
+
+
+## 4.2 多模块工程场景验证
+在多模块工程中，每个需要使用apt的模块都需要加上annotationProcessor（纯Java工程）或者kapt（kotlin工程）依赖，每个使用了apt的模块都会执行自己的apt任务。
+
+以一个多模块工程例子，来验证一些文档不清楚的问题：
+```
+app
+  --lib
+  --compiler
+  --annotation
+```
+* annotation模块包含定义的注解
+* compiler模块为kapt处理模块，包含Processor，依赖了annotation模块
+* lib模块依赖了annotation模块，在代码中会使用注解，并且使用了kapt依赖compiler模块
+* app模块依赖lib模块和annotation模块，代码中也使用了注解，并且使用了kapt依赖compiler模块
+
+多个注解处理器，在配置文件中写多行：
+```
+// META-INF/services/javax.annotation.processing.Processor
+com.example.compiler.apt.FirstAptProcessor
+com.example.compiler.apt.SecondAptProcessor
+```
+
+在这个情况下，app和lib模块都使用了kapt，那么都将执行各自的kapt任务，每个kapt任务将执行多个processor
+```
+Task :lib:kaptDebugKotlin
+Task :app:kaptDebugKotlin
+```
+
+1. `RoundEnvironment.getRootElements()`方法拿到的root elements到底是什么？**经过验证，得到是被kapt处理的模块内参与源码编译的全部Class**。比如processor处理lib模块时，lib模块里面有A、B、C三个类，那么就会拿到它们三个（可能还有一些生成的类，比如Android模块会有BuildConfig类）。首轮process可以拿到当前模块的全部源码类，但后续轮次就只能拿到新生成的类。
+2. process的返回值影响的是处理相同注解的processor，前面的接口介绍中已经说明。如果项目只有一个处理某个注解的注解处理器，则返回值实际没影响。
+3. 单个处理器情况，如果没有生成代码，首轮process调用`getRootElements()`和`getElementsAnnotatedWith`都正常收到当前模块的对应的element。第2轮轮调用则为空。
+4. 单个处理器情况，如果生成代码的情况，并且代码没有添加要处理的注解，则会有3轮process，第2轮输入为第1轮生成的Element（比如一个类）
+。如果生成的代码添加了当前Processor要处理的注解，则会有4轮process，第2轮输入为第一轮生成的类，第3轮输入第2轮产生的添加了注解的Element。
+5. 也就是本轮的输出会作为下一轮的输入，本轮的输入不会在下一轮再次输入。
+6. roundEnv.processingOver() 最后一轮得到true，之前的轮次得到false。
+7. 没有修改任何代码，直接再次build，apt不会再次执行；如果修改了某个模块的代码，再次build，它对应的apt任务会重新执行。重新执行apt，之前生成的代码会被自动删除，本次apt任务重新生成源文件。（如果一次apt任务内的多次process生成同一个文件会报错）
+8. gradle 4.7版本以上支持apt增量编译 https://docs.gradle.org/current/userguide/java_plugin.html#sec:incremental_annotation_processing
