--- a/Java/并发.md
+++ b/Java/并发.md
@@ -500,6 +500,8 @@ https://www.cnblogs.com/waterystone/p/4920797.html
 
 在JDK 1.5之后，Java程序中才可以使用CAS操作，该操作由sun.misc.Unsafe类提供，虚拟机在内部对这些方法做了特殊处理，即时编译出来的结果就是一条平台相关的处理器CAS指令，没有方法调用的过程，或者可以认为是内联进去了。例如AtomicInteger的incrementAndGet()方法就会在无限循环中尝试将比自己大1的新值赋值给自己，失败就再次循环尝试，直到成功。
 
+> CAS的使用方式通常为死循环compare and set，如果成功则执行成功逻辑，成功后其他线程无法成功，则执行失败逻辑
+
 ### 5. 无同步方案
 使用可重入代码（不依赖共享数据）、线程本地存储等。
 
